--- a/hello-world-6-jenkins/hello-world-6-jenkins/hello-world-6-jenkins.csproj
+++ b/hello-world-6-jenkins/hello-world-6-jenkins/hello-world-6-jenkins.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>demo_jenkins_job</RootNamespace>
+    <TargetFramework>net6.0</TargetFramework>
+    <RootNamespace>hello_world_6_jenkins</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
